<resources>
    <string name="app_name">Statistics</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="login">登录</string>
    <string name="wellcome_login">欢迎登录</string>
    <string name="hint_phone">请输入11位手机号</string>
    <string name="input_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="login_des">收不到验证码？试试语音输入吧</string>
    <string name="login_button">登录</string>
    <string name="later">请稍后...</string>

</resources>
